[project]
name = "app"
version = "0.1.4"
description = "a proxy checker app"
requires-python = ">=3.13"
dependencies = [
    "mm-base1==0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.1",
    "ruff~=0.9.2",
    "pip-audit~=2.7.3",
    "bandit~=1.8.2",
    "mypy~=1.14.1",
    "types-PyYAML~=6.0.12.20241230",
]

[tool.mypy]
python_version = "3.13"
implicit_reexport = true
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
[[tool.mypy.overrides]]
module = ["wtforms.*", "telebot.types.*", "telebot.util.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["app.routers.*"]
disable_error_code = ["no-untyped-def"]

[tool.ruff]
line-length = 130
target-version = "py313"
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TC", # flake8-type-checking, TYPE_CHECKING is dangerous, for example it doesn't work with pydantic
    "A005", # flake8-builtins: stdlib-module-shadowing
    "ERA001", # eradicate: commented-out-code
    "PT", # flake8-pytest-style
    "D", # pydocstyle
    "FIX", # flake8-fixme
    "PLR0911", # pylint: too-many-return-statements
    "PLR0912", # pylint: too-many-branches
    "PLR0913", # pylint: too-many-arguments
    "PLR2004", # pylint: magic-value-comparison
    "PLC0414", # pylint: useless-import-alias
    "FBT", # flake8-boolean-trap
    "EM", # flake8-errmsg
    "TRY003", # tryceratops: raise-vanilla-args
    "C901", # mccabe: complex-structure,
    "BLE001", # flake8-blind-except
    "S311", # bandit: suspicious-non-cryptographic-random-usage
    "TD002", # flake8-todos: missing-todo-author
    "TD003", # flake8-todos: missing-todo-link
    "RET503", # flake8-return: implicit-return
    "RUF012", # ruff: mutable-class-default
    "COM812", # it's used in ruff formatter
]
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["field_validator"]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN", "S"]
"src/app/routers/*.py" = ["ANN"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
